--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -400,6 +400,7 @@ From Low German {{m|nds|bulle}}.
 #: {{ux|fr|Il fait froid; je vais mettre mon '''pull'''.|It's cold; I'm going to put on my '''pullover'''.}}
 
 [[Category:fr:Clothing]]
+[[Category:en:Ultimate]]
 
 [[ar:pull]]
 [[az:pull]]
