--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -103,45 +103,44 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Straight is sometimes humorously used as meaning low quality by homosexuals and bisexuals, rather than [[gay]].
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''straight''}}
-* {{l|en|damn straight}}
-* {{l|en|go straight}}
-* {{l|en|scare straight}}
-* {{l|en|straight A}}
-* {{l|en|straight-acting}}
-* {{l|en|straight and narrow}}
-* {{l|en|straight arm}} / [[straight-arm]]
-* {{l|en|straight as an arrow}}
-* {{l|en|straightaway}}, {{l|en|straight away}}
-* {{l|en|straight bat}}
-* {{l|en|straight dinkum}}
-* {{l|en|straightedge}} / [[straight edge]]
-{{rel-mid3}}
-* {{l|en|straight-eight}}
-* {{l|en|straighten}}
-* {{l|en|straight engine}}
-* {{l|en|straight face}}
-* {{l|en|straight-faced}}
-* {{l|en|straight flush}}
-* {{l|en|straightforward}} / [[straight-forward]]
-* {{l|en|straight from the horse's mouth}}
-* {{l|en|straight from the shoulder}}
-* {{l|en|straight goods}}
-* {{l|en|straight hit}}
-* {{l|en|straightjacket}}
-{{rel-mid3}}
-* {{l|en|straight line}}
-* {{l|en|straightly}}
-* {{l|en|straight man}}
-* {{l|en|straightness}}
-* {{l|en|straight, no chaser}}
-* {{l|en|straight out of the chute}}
-* {{l|en|straight shooter}}
-* {{l|en|straight-six}}
-* {{l|en|straight ticket}}
-* {{l|en|straight up}}
-* {{l|en|straightway}}
-{{rel-bottom}}
+{{der3|lang=en|title=Terms derived from ''straight''
+| {{l|en|damn straight}}
+| {{l|en|go straight}}
+| {{l|en|play it straight}}
+| {{l|en|scare straight}}
+| {{l|en|straight A}}
+| {{l|en|straight-acting}}
+| {{l|en|straight and narrow}}
+| {{l|en|straight arm}} / [[straight-arm]]
+| {{l|en|straight as an arrow}}
+| {{l|en|straightaway}}, {{l|en|straight away}}
+| {{l|en|straight bat}}
+| {{l|en|straight dinkum}}
+| {{l|en|straightedge}} / [[straight edge]]
+| {{l|en|straight-eight}}
+| {{l|en|straighten}}
+| {{l|en|straight engine}}
+| {{l|en|straight face}}
+| {{l|en|straight-faced}}
+| {{l|en|straight flush}}
+| {{l|en|straightforward}} / [[straight-forward]]
+| {{l|en|straight from the horse's mouth}}
+| {{l|en|straight from the shoulder}}
+| {{l|en|straight goods}}
+| {{l|en|straight hit}}
+| {{l|en|straightjacket}}
+| {{l|en|straight line}}
+| {{l|en|straightly}}
+| {{l|en|straight man}}
+| {{l|en|straightness}}
+| {{l|en|straight, no chaser}}
+| {{l|en|straight out of the chute}}
+| {{l|en|straight shooter}}
+| {{l|en|straight-six}}
+| {{l|en|straight ticket}}
+| {{l|en|straight up}}
+| {{l|en|straightway}}
+}}
 
 ====Translations====
 {{trans-top|not crooked or bent}}
