--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -48,7 +48,10 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
 
-# {{defn|lang=ja|sort=土06}}
+# [[border]]
+# [[boundary]]
+# [[staircase]]
+# hundred quintillion
 
 ====Readings====
 * {{ja-readings|on=[[がい]] (''gai''), [[かい]] (''kai'')|kun=[[はて]] (''hate'')}}
