--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -25,7 +25,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 #: {{ux|en|The skater performed a '''beautiful''' [[axel]].}}
 
 ====Usage notes====
-The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are nonstandard.
+*The term carries a distinctly feminine aspect and is mostly not applied to men (in which case {{m|en|handsome}} is more appropriate and {{m|en|de rigueur}}).
+*The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are nonstandard.
 
 ====Synonyms====
 * {{sense|possessing charm and attractive}} {{l|en|beauteous}}, {{l|en|attractive}}, {{l|en|cute}}, {{l|en|fair}}, {{l|en|good-looking}}, {{l|en|gorgeous}}, {{l|en|sheen}}, {{l|en|handsome}}, {{l|en|hot}} {{qualifier|slang}}, [[lovely]], [[nice-looking]], [[pretty]], [[shapely]], [[fit]] {{qualifier|slang}}
