--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -143,7 +143,7 @@ All four share {{ja-l|火}}, as stars resembled small balls of fire, and likely 
 
 From {{der|ja|ltc|sort=せい|星|tr={{IPAchar|/seŋ/}}||star}}.
 
-The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji spelling {{l|ja|星加坡}} (modern kanji spelling {{l|ja|新加坡}}) as a {{bor|ja|zh|-|nocap=1}}, itself a {{l|en|transliteration}} of {{cog|ms|Singapura}}.
+The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji spelling {{l|ja|星加坡}} (modern kanji spelling {{l|ja|新加坡}}) as borrowed from {{bor|ja|zh|-|notext=1}}, itself a {{l|en|transliteration}} of {{cog|ms|Singapura}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=kanon|せい|acc=1|acc_ref=DJR}}
