--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -32,7 +32,7 @@ Three other forms were found in the oracle bone script:
 |md=màng/mìng
 |md_note=màng - vernacular; mìng - literary
 |mn=bêng/bîn/miâ/xm,kh,yl,tn,tc:mê/zz:mêe/tn,mg:mî/qz,tp,lk,sx,hc:môa/twv:mâ
-|mn_note=bêng - literary; bîn/miâ - vernacular; mê/mêe/mî/môa/mâ - vernacular (limited, e.g. {{zh-l|*明年}})
+|mn_note=bêng - literary; bîn, miâ - vernacular; mê/mêe/mî/môa/mâ - vernacular (limited, e.g. {{zh-l|*明年}})
 |w=3men,3min
 |w_note=3men - vernacular; 3min - literary
 |mc=y
