--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -85,19 +85,17 @@ Three other forms were found in the oracle bone script:
 * {{ja-r|明日|あした}}, {{ja-r|明日|あす}}, {{ja-r|明日|みょうにち}}: tomorrow
 * {{ja-r|明暗|めいあん}}
 * {{ja-r|明快|めいかい}}
-* {{ja-r|明解|明解}}
-* {{ja-r|明海|明海}}
+* {{ja-r|明解|めいかい}}
+* {{ja-r|明海|めいかい}}
 * {{ja-r|明確|めいかく}}
-* {{ja-r|明晦|明晦}}
 * {{ja-r|明鏡止水|めいきょうしすい}}
-* {{ja-r|明君|明君}}
+* {{ja-r|明君|めいくん}}
 * {{ja-r|明言|めいげん}}
 * {{ja-r|明察|めいさつ}}
 {{mid3}}
 * {{ja-r|明示|めいじ}}
 * {{ja-r|明星|みょうじょう}}
 * {{ja-r|明治|^めいじ}}
-* {{ja-r|明時|明時}}
 * {{ja-r|明信|^あきのぶ}}
 * {{ja-r|明晰|めいせき}}
 * {{ja-r|明朝|みょうちょう}}, {{ja-r|明朝|^みんちょう}}
@@ -112,7 +110,7 @@ Three other forms were found in the oracle bone script:
 * {{ja-r|照明|しょうめい}}
 * {{ja-r|灯明|とうみょう}}
 * {{ja-r|透明|とうめい}}
-* {{ja-r|薄明|薄明}}
+* {{ja-r|薄明|はくめい}}
 * {{ja-r|発明|はつめい}}
 * {{ja-r|文明|ぶんめい}}
 * {{ja-r|晨明|しんめい}}: [[dawn]]
