--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -55,7 +55,11 @@
 # prosper
 
 ====Readings====
-* {{ja-readings|on=[[しょう]] (shō)|kun=[[さかん]] (sakan)|nanori=[[まさ]] (masa), [[あき]] (aki)}}
+{{ja-readings
+|on=しょう
+|kun=さかん
+|nanori=まさ, あき
+}}
 
 ----
 
