--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -63,8 +63,8 @@ Cognate with {{och-l|寔|this}}, {{och-l|實|this}} and {{och-l|諟|to examine, 
 ##: {{zh-x|房子 前面 是 禾場。|The threshing floor '''is''' in front of the house.}}
 ##: {{zh-x|到處 都 是|to '''be''' everywhere}}
 # {{n-g|a particle emphasizing the word following it.}}
-#: {{zh-x|我 是 昨天 買 的 票。|'''It was''' yesterday when I bought the ticket.}}
-#: {{zh-x|我 買 票 是 在 昨天。|'''It was''' yesterday when I bought the ticket.}}
+#: {{zh-x|我 是 昨天 買 的 票。|'''It was''' yesterday '''when''' I bought the ticket.}}
+#: {{zh-x|我 買 票 是 在 昨天。|'''It was''' yesterday '''when''' I bought the ticket.}}
 # {{n-g|a particle showing agreement. In this meaning, 是 is stressed.}} [[truly]]; [[indeed]].
 #: {{zh-x|天氣 是 冷。|It is '''indeed''' cold.}}
 #: {{zh-x|是，長{zhǎng}官。|'''Yes''', sir.}}
