--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -106,9 +106,9 @@ From {{inh|zh|sit-pro|*lwa(ː)y||easy}}. Cognate with {{cog|my|လွယ်||eas
 
 ====Readings====
 {{ja-readings
-|goon=い, やく
-|kanon=い, えき
-|kun=やさ-しい, か-える, おさめる
+|goon=い,やく
+|kanon=い,えき
+|kun=おさ-める,やさ-し.い,か-える
 }}
 
 ===Noun===
