--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -55,7 +55,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
 
-# {{defn|lang=ja|sort=日04}}
+# [[high]] [[spirited]]; to raise the head; the [[De'ang]] ethnic group
 
 ====Readings====
 * {{ja-readings|on=[[こう]] (kō), [[ごう]] (gō)|kun=[[あがる]] (agaru), [[たかい]] (takai)}}
