--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -267,3 +267,4 @@ From {{etyl|enm|en}} {{m|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{e
 [[Category:English 1-syllable words]]
 [[Category:English basic words]]
 [[Category:English irregular verbs]]
+[[Category:English class 1 strong verbs]]
