--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -379,7 +379,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 [[Category:English basic words]]
 [[Category:English irregular verbs]]
 [[Category:en:Talking]]
-
+[[Category:English class 5 strong verbs]]
 ----
 
 ==Scots==
