--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -63,6 +63,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Arabic: {{t|ar|جَمِيل}}
 *: Moroccan Arabic: {{t|ary|زوين|m|tr=zwin}}
 * Armenian: {{t+|hy|գեղեցիկ|sc=Armn}}, {{t+|hy|սիրուն|sc=Armn}}
+* Assamese: {{t|as|ধুনীয়া|tr=dhunia}} {{qualifier|common}}, {{t|as|ভাল লগা|tr=bhal lôga}}, {{t|as|সুন্দৰ|tr=xundôr}}
 * Asturian: {{t|ast|guapu|m}}, {{t|ast|guapa|f}}, {{t|ast|formosu|m}}, {{t|ast|formosa|f}}
 * Azeri: {{t+|az|qəşəng}}
 *: Cyrillic: {{t|az|гәшәнҝ|sc=Cyrl}}
@@ -163,6 +164,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Spanish: {{t+|es|hermoso|m}}, {{t+|es|hermosa|f}}, {{t+|es|bello|m}}, {{t+|es|bella|f}} [[lindo]], {{t+|es|linda|f}}, {{t+|es|guapo|m}}, {{t+|es|guapa|f}}, {{t+|es|bonito|m}}, {{t+|es|bonita|f}}
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
+* Sylheti: {{t|syl|ꠡꠥꠘ꠆ꠖꠞ|tr=śundor}}
 * Tagalog: {{t+|tl|maganda}}
 * Tajik: {{t+|tg|зебо||sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
 * Tamil: {{t+|ta|அழகிய}}
