--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -29,21 +29,20 @@
 |m=áng
 |m-s=ngang2
 |c=ngong4,ngong5
-|mn=qz,tw,xm:gông/zz:gâng
+|mn=xm,qz,tw:gông/zz:gâng
 |mc=y
 |oc=y
 |ma=
-|cat=v,a
+|cat=v,a,pn
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[high]] spirited; to [[raise]]; to [[rise]]
-# [[upright]]
-# [[aroused]] to [[indignation]]
-# the [[De'ang]] ethnic group
-
+# to [[raise]]; to [[lift]]
+# to [[rise]]
+# [[high]] spirited; [[upright]]
+# {{surname|lang=zh}}
 
 ====Compounds====
 {{zh-der|昂昂|昂奮|昂貴|昂然|昂首|昂首闊步|昂揚|慷慨激昂|人物軒昂|器宇軒昂|低昂|意氣軒昂|德昂族|昂藏|氣昂昂|昂首挺胸|激昂|昂頭挺立|昂首挺立|氣宇軒昂|氣宇昂昂|昂昂溪|激昂慷慨|昂首望天|應昂|波昂|瞵視昂藏|昂昂烈烈|軒昂自若|鬥志昂揚|聳壑昂霄|筋骨昂然|高昂鬥志|高昂|里昂|軒昂氣宇|鬥志高昂|軒昂}}
@@ -55,7 +54,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
 
-# [[high]] [[spirited]]; to raise the head; the [[De'ang]] ethnic group
+# [[high]] [[spirited]]
+# to raise the head
 
 ====Readings====
 * {{ja-readings|on=[[こう]] (kō), [[ごう]] (gō)|kun=[[あがる]] (agaru), [[たかい]] (takai)}}
