--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -199,6 +199,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-bottom}}
 
 {{trans-top|the act of vomiting}}
+* Arabic: {{t|ar|اِسْتِفْرَاغ|m}}
 * Galician: {{t|gl|vómito|m}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
 * Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
