--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -4,20 +4,38 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=25207|canj=OJLN|ids=⿰亻事}}
 
-# [[stick]] in, [[stab]]
-# to [[erect]]
-
 ====References====
-* {{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
+{{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms|alt=事}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[si6]], [[zi3]]|y=si6, ji3}}
+===Pronunciation===
+{{zh-pron
+|m=zì
+|m-s=
+|c=zi3,zi6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# to [[establish]]
+# {{zh-alt-form|剚|to [[stick]] in; to [[stab]]}}
 
 ----
 
@@ -39,12 +57,3 @@
 {{ko-hanja|hangeul=사|rv=sa|mr=sa}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zì]] ([[zi4]])|wg=tzu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
