--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -29,7 +29,8 @@
 |h=pfs=vong
 |md=
 |mn=ōng
-|w=
+|w=3hhuaan,3hhiaan
+|w_note=hhuaan<sup>23</sup> - literary; hhiaan<sup>23</sup> - vernacular
 |mc=y
 |oc=y
 |cat=
