--- a/en/倣/倣.11032.wikitext
+++ b/en/倣/倣.11032.wikitext
@@ -5,8 +5,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=28240|canj=OYSK|ids=⿰亻放}}
 
-# to [[imitate]]
-
 ====References====
 * {{Han ref|kx=0108.140|dkj=00785|dj=0231.040|hdz=10183.020|uh=5023|ud=20515|bh=ADC0|bd=44480}}
 
@@ -17,7 +15,7 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Etymology===
+===Definitions===
 {{zh-see|仿|v}}
 
 ====References====
