--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -10,7 +10,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||it is}}.
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/|lang=en}}
 * {{audio|en-us-i.e..ogg|Audio (US)|lang=en}}
-* It is usually spoken as ''[[that is]]''.
+* It is sometimes spoken as ''[[that is]]''.
 
 ===Abbreviation===
 {{rfc-header|Abbreviation}}
