--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -12,7 +12,7 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}
 
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
-# [[earth]], [[Earth]]
+# {{senseid|he|Q2}}[[earth]], [[Earth]]
 #* {{RQ:Tanach|1|1|1|t=JPS}}
 #*: {{ux|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃|tr=b'reshít bará 'elohím 'ét hashamáyim v'ét '''ha'árets'''.|In the beginning God created the heaven and '''the earth'''.}}
 # [[ground]], [[soil]]
