--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -420,6 +420,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 # {{lb|en|intransitive|cinema|audio|usually as imperative}} To [[cease]] [[record]]ing activities.
 #: {{ux|en|After the actors read their lines, the director yelled, "'''Cut'''!"}}
 # {{lb|en|intransitive|cinema}} To make an abrupt transition from one [[scene]] or image to another.
+#: ''The camera then '''cut''' to the woman on the front row who was clearly overcome and crying tears of joy.''
 # {{lb|en|transitive|film}} To [[edit]] a film by selecting [[takes]] from original [[footage]].
 # {{lb|en|transitive|computing}} To [[remove]] and place in [[memory]] for later use.
 #: {{ux|en|Select the text, '''cut''' it, and then paste it in the other application.}}
