--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -10,7 +10,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * {{rhymes|ɛʃ|lang=en}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|-|es}}
 
 # The soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
 #* '''1918''', Fannie Farmer, ''[[s:Boston Cooking-School Cook Book/Chapter 17|Boston Cooking-School Cook Book]]'', Chapter XVII: Poultry and Game:
