--- a/en/偞/偞.11118.wikitext
+++ b/en/偞/偞.11118.wikitext
@@ -11,12 +11,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jip6]]|y=yip6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人09}}
+===Pronunciation===
+{{zh-pron
+|m=xiè,yè
+|c=jip6
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -38,12 +51,3 @@
 {{ko-hanja|hangeul=엽|rv=yeop|mr=yŏp}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yè]] ([[ye4]])|wg=yeh<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
