--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -84,6 +84,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Korean: {{t+|ko|게우다}}
 {{trans-mid}}
 * Kyrgyz: {{t|ky|кусуу}}
+* Ladin: {{t|lld|peté su}}
 * Lao: {{t|lo|ອາຈຽນ}}, {{t|lo|ສຳຮາກ}}, {{t|lo|ອົ້ວະ}}, {{t|lo|ຮາກ}}, {{t|lo|ລົງຮາກ}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
 * Latvian: {{t|lv|vemt}}
