--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -33,7 +33,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{m|ur|پایجامه|tr=pāyjāma}} / {{m|hi
 * Armenian: {{t+|hy|պիժամա}}, {{t+|hy|ննջազգեստ}}
 * Azeri: {{t|az|pijama}}
 * Belarusian: {{t|be|піжа́ма|f|sc=Cyrl}}
-* Bengali: {{t|bn|পায়জামা|sc=Beng}}
+* Bengali: {{t|bn|পায়জামা|tr=payjama|sc=Beng}}
 * Bulgarian: {{t|bg|пижа́ма|f|sc=Cyrl}}
 * Burmese: {{t-needed|my}}
 * Catalan: {{t+|ca|pijama|m}}
