--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -129,7 +129,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
-* Mongolian: {{t+|mn|сайхан|sc=Cyrl}}
+* Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
 * Navajo: {{t|nv|nizhóní}}, {{t|nv|nizhóní yeeʼ}}
 * Norman: {{t|nrf|bieau|m}}, {{t|nrf|belle|f}}
 * Northern Thai: {{t-needed|nod}}
