--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -66,8 +66,7 @@
 # [[scum]]
 # [[dirt]]
 # {{lb|ja|slang|computing|sort=あか}} [[account]]
-#* [http://www.nicovideo.jp/watch/sm27024908]
-#*: {{ja-usex|さっきプレミアム'''垢'''にしてきたので画質テスト版です。|^さっき プレミアム '''あか''' に してきた ので がしつ テスト ばん です。|I just got a premium '''account''', so this is a video quality test version.}}
+#* {{ja-usex|さっきプレミアム'''垢'''にしてきたので画質テスト版です。|^さっき プレミアム '''あか''' に してきた の で がしつ テスト ばん です。|I just got a premium '''account''', so this is a video quality test version.|ref=[http://www.nicovideo.jp/watch/sm27024908]}}
 
 ===References===
 <references/>
