--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -90,7 +90,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 ===Noun===
 {{en-noun|?}}
 
-# {{lb|en|informal}} misuse of the abbreviation "e.g." (lat. exempli gratia, for example) as a pseudo-abbreviation of "example"
+# {{lb|en|informal}} misuse of the abbreviation "e.g." (exempli gratia, for example) as a pseudo-abbreviation of "example"
 #: ''Lemurs are an '''e.g.''' of a non-simian primate.''
 
 ===Anagrams===
