--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -22,6 +22,7 @@
 
 ====Translations====
 {{trans-top-also|id=Q145|Kingdom in Europe|Great Britain}}
+* Adyghe: {{t|ady|Британиешхо Пачъыхьыгъо}}
 * Afrikaans: {{t|af|Verenigde Koninkryk}}
 * Albanian: {{t|sq|Mbretëria e Bashkuar}}
 * Amharic: {{t|am|ዩናይትድ ኪንግደም|sc=Ethi}}
