--- a/en/坶/坶.13049.wikitext
+++ b/en/坶/坶.13049.wikitext
@@ -11,12 +11,20 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=muk6}}
+===Pronunciation===
+{{zh-pron
+|m=mù,mǔ
+|c=muk6
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -28,13 +36,7 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[ぼく]] (boku), [[もく]] (moku)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mù]] ([[mu4]])|wg=mu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
+{{ja-readings
+|on=ぼく, もく
+|kun=
+}}
