--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -227,3 +227,5 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 
 ====Declension====
 {{sv-infl-noun-c-ar}}
+
+[[Category:en:People]]
