--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -68,7 +68,7 @@ Strong conjugation of {{m|en|heat}}
 * {{l|af|'t}} {{qualifier|in informal writing, reflecting the contracted pronunciation}}
 
 ===Etymology===
-From the {{etyl|nl|af}} 3rd person singular of {{m|nl|hebben}}, which is {{m|nl|heeft}} in standard Dutch, but ''het'' in many dialects. Compare also {{cog|de|hat}}, {{cog|en|has}} (from older {{cog|en|hath}}).
+From the {{der|af|nl|-}} 3rd person singular of {{m|nl|hebben}}, which is {{m|nl|heeft}} in standard Dutch, but ''het'' in many dialects. Compare also {{cog|de|hat}}, {{cog|en|has}} (from older {{cog|en|hath}}).
 
 ===Pronunciation===
 * {{IPA|/ɦɛt/|lang=af}}
