--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -76,7 +76,7 @@ From {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, 
 *: Ancient: {{t|grc|ἐλαίᾱ|f}}
 * Greenlandic: {{t|kl|oliveni}}
 * Gujarati: {{t|gu|ઓલિવ|m|tr=ōliva|sc=Gujr}}, {{t|gu|જૈતૂન|n|tr=jaitūn|sc=Gujr}}
-* Hausa: {{t+|ha|zaitun|m|alt=zàitûn}}, {{t+|ha|zaitun}}
+* Hausa: {{t+|ha|zaitun|m|alt=zàitûn}}
 * Hebrew: {{t+|he|זית|tr=zait}}
 * Hindi: {{t|hi|ज़ैतून|tr=zaitūn}}, {{t|hi|तैलबदर|m|tr=tailbadara|sc=Deva}}
 * Hungarian: {{t+|hu|olajbogyó}}
