--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -3,12 +3,6 @@
 [[File:Kids in pajamas.jpg|right|thumb|Two boys in '''pajamas'''.]]
 {{wikipedia}}
 
-===Alternative forms===
-* {{l|en|pyjamas}} {{qualifier|Australia|UK|Canada}}
-
-===Etymology===
-From {{etyl|ur|en}}/{{etyl|hi|en}} {{m|ur|پایجامه|tr=pāyjāma}} / {{m|hi|पैजामा|tr=payjāmā}}, from {{etyl|fa|en}} {{m|fa|پایجامه|پايجامه / پاجامه|tr=pāyjāma / pājāma|leg garment}}.
-
 ===Pronunciation===
 * {{IPA|/pə.ˈd͡ʒɑ.məz/|/pə.ˈd͡ʒæ.məz/|lang=en}}
 * {{audio|en-us-pajamas.ogg|Audio (US)|lang=en}}
@@ -16,97 +10,10 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{m|ur|پایجامه|tr=pāyjāma}} / {{m|hi
 ===Noun===
 {{en-plural noun|sg=pajama}}
 
-# [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants/trousers.
-# Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
-
-====Usage notes====
-''Pajamas'' is chiefly a U.S. spelling; the rest of the English-speaking world uses ''pyjamas''.
+# US spelling of '''[[pyjamas]]'''
 
 ====Derived terms====
 * {{l|en|cat's pajamas}}
 * {{l|en|pajama}}
-
-====Translations====
-{{trans-top|clothes for wearing to bed and sleeping in}}
-* Albanian: {{t|sq|pizhamë|f}}
-* Arabic: {{t|ar|بِجَامَة|f}}
-* Armenian: {{t+|hy|պիժամա}}, {{t+|hy|ննջազգեստ}}
-* Azeri: {{t|az|pijama}}
-* Belarusian: {{t|be|піжа́ма|f|sc=Cyrl}}
-* Bengali: {{t|bn|পায়জামা|tr=payjama|sc=Beng}}
-* Bulgarian: {{t|bg|пижа́ма|f|sc=Cyrl}}
-* Burmese: {{t-needed|my}}
-* Catalan: {{t+|ca|pijama|m}}
-* Chinese:
-*: Cantonese: {{t|yue|睡衣|tr=seoi6 ji1|sc=Hani}}, {{t|yue|瞓覺衫}}, {{t|yue|瞓觉衫|tr=fan3 gaau3 saam1}}
-*: Hakka: {{t|hak|著睡衫|sc=Hani}}, {{t|hak|着睡衫|tr=chok-soi-sâm|sc=Hani}}, {{t|hak|睡目衫|tr=soi-muk-sâm|sc=Hani}}
-*: Mandarin: {{t+|cmn|睡衣|tr=shuìyī|sc=Hani}}
-*: Min Nan: {{t+|nan|睏衫|tr=khùn-saⁿ|sc=Hani}}
-* Czech: {{t+|cs|pyžamo|n}}
-* Danish: {{t+|da|pyjamas|c}}
-* Dutch: {{t+|nl|pyjama|m}}
-* Esperanto: {{t|eo|piĵamo}}
-* Estonian: {{t|et|pidžaama}}
-* Finnish: {{t+|fi|pyjama}}, {{t+|fi|yöpuku}}
-* French: {{t+|fr|pyjama|m}}
-* Galician: {{t+|gl|pixama|m}}
-* Georgian: {{t|ka|პიჟამო|sc=Geor}}
-* German: {{t+|de|Pyjama|m}}, {{t+|de|Schlafanzug|m}}
-* Greek: {{t+|el|πιτζάμα|f|sc=Grek}}
-* Hebrew: {{t|he|פִּיגָ׳מָה|f|tr=pijama|sc=Hebr}}
-* Hindi: {{t+|hi|पाजामा}}, {{t+|hi|पैजामा}}
-* Hungarian: {{t+|hu|pizsama}}
-* Icelandic: {{t+|is|náttföt}}
-* Indonesian: {{t+|id|piyama}}
-* Interlingua: {{t|ia|pajama}}
-* Italian: {{t+|it|pigiama|m}}
-* Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
-* Kazakh: {{t+|kk|пижама|sc=Cyrl}}
-* Khmer: {{t|km|ឈុតគេង|tr=cʰut keeŋ|sc=Khmr}}
-{{trans-mid}}
-* Korean: {{t+|ko|파자마}}
-* Kyrgyz: {{t|ky|пижама|sc=Cyrl}}
-* Lao: {{t|lo|ສົ້ງເສື້ອນຸ່ງນອນ|sc=Laoo}}, {{t|lo|ເສຶ້ອນອນ|sc=Laoo}}, {{t|lo|ເສື້ອນອນ|sc=Laoo}}
-* Latvian: {{t|lv|pidžama|f}}
-* Lithuanian: {{t|lt|pižama|f}}
-* Macedonian: {{t|mk|пижа́ма|f}}
-* Maltese: {{t|mt|paġama|f}}
-* Maori: {{t|mi|kākahu moe}}
-* Mongolian: {{t|mn|унтлагын хувцас|sc=Cyrl}}
-* Norwegian: {{t+|no|pysjamas|m}}
-* Persian: {{t|fa|پايجامه|tr=pâyjâme}}, {{t+|fa|پیژامه|tr=pižâme}}
-* Polish: {{t+|pl|piżama|f}}, {{t+|pl|pidżama|f}}
-* Portuguese: {{t+|pt|pijama|m}}
-* Romanian: {{t+|ro|pijama|f}}
-* Russian: {{t+|ru|пижа́ма|f}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|пиџама|f|sc=Cyrl}}
-*: Roman: {{t+|sh|pidžama|f}}
-* Sinhalese: {{t|si|පිජාමා|sc=Sinh}}
-* Slovak: {{t|sk|pyžamo|n}}, {{t|sk|pyžama|f}}
-* Slovene: {{t+|sl|pižama|f}}
-* Spanish: {{t+|es|pijama}}, {{t|es|pijamas|n}}
-* Swedish: {{t+|sv|pyjamas|c}}
-* Tagalog: {{t|tl|pandiyama}}, {{t|tl|padyama}}, {{t|tl|damit-pantulog}}
-* Tajik: {{t|tg|пижама|sc=Cyrl}}
-* Telugu: {{t|te|పైజామా|sc=Telu}}
-* Thai: {{t|th|ชุดนอน}}
-* Turkish: {{t+|tr|pijama}}
-* Turkmen: {{t|tk|pijama}}
-* Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
-* Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}, {{t|ur|پایجامه|tr=paijāmā|sc=ur-Arab}}
-* Uzbek: {{t+|uz|pijama}}
-* Vietnamese: {{t|vi|pijama}}, {{t|vi|quần áo ngủ}}
-* Yiddish: {{t|yi|פּיזשאַמעס|f}}
-{{trans-bottom}}
-
-{{trans-top|loose-fitting trousers worn in the Far East}}
-* Polish: {{t+|pl|piżama|f}}, {{t+|pl|pidżama|f}}
-{{trans-mid}}
-{{trans-bottom}}
-
-===See also===
-* {{l|en|nightshirt}}
-* {{l|en|nightie}}
 
 [[Category:en:Clothing]]
