--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -160,8 +160,8 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Sanskrit: {{t+|sa|इष्टका}}
 * Scottish Gaelic: {{t|gd|breig}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|цигла|f}}, {{t|sh|опека|sc=Cyrl}}
-*: Roman: {{t+|sh|cigla}}, {{t+|sh|opeka}}
+*: Cyrillic: {{t|sh|цигла|f}}, {{t|sh|опека|f|sc=Cyrl}}
+*: Roman: {{t+|sh|cigla|f}}, {{t+|sh|opeka|f}}
 * Sicilian: {{t+|scn|maduni|m}}
 * Sinhalese: {{t|si|ගඩොල්|sc=Sinh}}
 * Slovak: {{t+|sk|tehla|f}}
