--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -167,7 +167,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Slovak: {{t+|sk|tehla|f}}
 * Slovene: {{t+|sl|opeka|f}}, {{t|sl|zidak|m}}
 * Spanish: {{t+|es|ladrillo|m}}
-* Swedish: {{t+|sv|tegel|n}}, {{t+|sv|tegelsten}}
+* Swedish: {{t+|sv|tegel|n}}, {{t+|sv|tegelsten|c}}
 * Tajik: {{t+|tg|хишт|sc=Cyrl}}
 * Tamil: {{t+|ta|செங்கல்|sc=Taml}}
 * Tatar: {{t+|tt|кирпеч|sc=Cyrl}}
