--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -18,7 +18,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 [[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
 # An [[image]], [[symbol]], [[picture]], or other [[representation]] usually as an object of religious devotion.
-# {{lb|en|religion}} A religious painting, often done on wooden panels.
+# {{lb|en|religion|especially|Eastern Christianity}} A type of religious painting portraying a [[saint]] or scene from [[Scripture]], often done on wooden panels.
 # A person or thing that is the best example of a certain profession or some doing.
 #: ''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
 # A small picture which represents something (such as an icon on a computer screen which when clicked performs some function.)
