--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -187,6 +187,8 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Sinhalese: {{t|si|ගඩොල්|sc=Sinh}}
 * Slovak: {{t+|sk|tehla|f}}
 * Slovene: {{t+|sl|opeka|f}}, {{t|sl|zidak|m}}
+* Sorbian:
+*: Upper Sorbian: {{t|hsb|cyhel|m}}
 * Spanish: {{t+|es|ladrillo|m}}
 * Swahili: {{t|sw|tofali|c5|c6}}
 * Swedish: {{t+|sv|tegel|n}}, {{t+|sv|tegelsten|c}}
