--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -66,7 +66,10 @@
 # {{defn|lang=ja|sort=日03}}
 
 ====Readings====
-* {{ja-readings|on=[[かん]] (kan)|kun=[[ひでり]] (hideri)}}
+{{ja-readings
+|on=かん
+|kun=ひでり-
+}}
 
 ====Compounds====
 * [[旱魃]]
