--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -177,7 +177,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Okinawan: {{t|ryu|煉瓦|tr=りんぐぁ, ringwa}}
 * Oriya: {{t+|or|ଇଟା|sc=Orya}}
 * Ossetian: {{t|os|агуыридур|sc=Cyrl}}
-* Pali: {{t|pi|iṭṭhakā}}, {{t|pi|giñjakā|f}}
+* Pali: {{t|pi|iṭṭhakā|f}}, {{t|pi|giñjakā|f}}
 * Papiamentu: {{t|pap|klenku}}
 * Pashto: {{t+|ps|خښته|f|tr=ḵẖaś̱ẖtaʿh|sc=ps-Arab}}
 * Persian: {{t+|fa|آجر|tr=âjor|sc=fa-Arab}}
