--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -59,7 +59,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #* '''2004''', {{w|Alan Hollinghurst}}, ''{{w|The Line of Beauty}}'', Bloomsbury, 2005, Chapter 2:
 #*: Nick was more and more seriously absorbed, but then just before he '''came''' he had a brief vision of himself, as if the trees and bushes had rolled away and all the lights of London shone in on him: little Nick Guest from Barwick, Don and Dot Guest's boy, fucking a stranger in a Notting Hill garden at night.
 #: {{ux|en|He '''came''' after a few minutes.}}
-# {{lb|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
+# {{lb|en|copulative|figuratively|with ''close''}}  (A different sort of copulative, not to be confused with the orgasm variety.) To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
 #: {{ux|en|One of the screws '''came''' loose, and the skateboard fell apart.}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
