--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -64,15 +64,15 @@
 }}
 
 ====Compounds====
-* [[意気軒昂]] ([[いきけんこう]], ikikenkō)
-* [[軒昂]] ([[けんこう]], kenkō)
-* [[激昂]] ([[げきこう]], gekikō ''and'' [[げっこう]], gekkō)
-* [[昂進]] ([[こうしん]], kōshin)
-* [[昂然]] ([[こうぜん]], kōzen)
-* [[昂騰]] ([[こうとう]], kōtō)
-* [[昂奮]] ([[こうふん]], kōfun)
-* [[昂揚]] ([[こうよう]], kōyō)
-* [[心悸昂進]] ([[しんきこうしん]], shinkikōshin)
+* {{ja-r|意気軒昂|いきけんこう}}
+* {{ja-r|軒昂|けんこう}}
+* {{ja-r|激昂|げきこう}}, {{ja-r|激昂|げっこう}}
+* {{ja-r|昂進|こうしん}}
+* {{ja-r|昂然|こうぜん}}
+* {{ja-r|昂騰|こうとう}}
+* {{ja-r|昂奮|こうふん}}
+* {{ja-r|昂揚|こうよう}}
+* {{ja-r|心悸昂進|しんきこうしん}}
 
 ----
 
