--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -11,9 +11,9 @@
 <!-- 1 syllable words !-->
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|fighten}}, from {{etyl|ang|en}} {{m|ang|feohtan||to fight, combat, strive}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*fehtaną||to comb, tease, shear}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*peḱ-||to comb, shear}}. Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||to fight}}, Dutch {{m|nl|vechten||to fight}}, Low German {{m|nds|fechten||to fight}}, German {{m|de|fechten||to fight, fence}}, Swedish {{m|sv|fäkta||to fence, to fight (using blade weapons), to wave vigorously (and carelessly) with one's arms}}, {{cog|la|pectō||comb, thrash|pos=verb}}, {{cog|sq|pjek||to hit, strive, fight}}, {{cog|grc|πέκω||comb or card wool|pos=verb}}. Related also to {{cog|ang|feht||wool, shaggy pelt, fleece}}.
+From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive}}, from {{inh|en|gem-pro|*fehtaną||to comb, tease, shear}}, from {{der|en|ine-pro|*peḱ-||to comb, shear}}. Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||to fight}}, {{cog|nl|vechten||to fight}}, {{cog|nds|fechten||to fight}}, {{cog|de|fechten||to fight, fence}}, {{cog|sv|fäkta||to fence, to fight (using blade weapons), to wave vigorously (and carelessly) with one's arms}}, {{cog|la|pectō||comb, thrash|pos=verb}}, {{cog|sq|pjek||to hit, strive, fight}}, {{cog|grc|πέκω||comb or card wool|pos=verb}}. Related also to {{cog|ang|feht||wool, shaggy pelt, fleece}}.
 
-The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevecht}} and German {{m|de|Gefecht}}.
+The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevecht}} and German {{m|de|Gefecht}}.
 
 ===Verb===
 {{en-verb|fights|fighting|fought|fought|past_ptc2=foughten|past_ptc2_qual=archaic}}
