--- a/en/晁/晁.17002.wikitext
+++ b/en/晁/晁.17002.wikitext
@@ -4,21 +4,36 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=06|sn=10|four=60113|canj=ALMO|ids=⿱日兆}}
 
-# [[morning]], [[dawn]]
-# used as a [[surname]]
-
 ====References====
 * {{Han ref|kx=0494.210|dkj=13889|dj=0859.140|hdz=21508.150|uh=6641|ud=26177|bh=AED0|bd=44752}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Pronunciation===
+{{zh-pron
+|m=Cháo
+|m-s=
+|c=siu6,ciu4
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=pn
+}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ciu4]]|y=chiu4}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=日06}}
-
+# {{surname|lang=zh}}
 ----
 
 ==Japanese==
@@ -40,14 +55,6 @@
 
 # {{defn|lang=ko|sort=日06}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[cháo]] ([[chao2]])|wg=ch'ao<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日06}}
 
 ----
 
