--- a/en/晁/晁.17002.wikitext
+++ b/en/晁/晁.17002.wikitext
@@ -10,8 +10,8 @@
 ----
 ==Chinese==
 {{zh-forms}}
-
-===Pronunciation===
+===Etymology 1===
+====Pronunciation====
 {{zh-pron
 |m=Cháo
 |m-s=
@@ -30,10 +30,25 @@
 |cat=pn
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{surname|lang=zh}}
+
+===Etymology 2===
+====Pronunciation====
+{{zh-pron
+|m=zhào
+|cat=pn
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|晁陽}}
+
+===Etymology 3===
+{{zh-see|朝|v}}
 ----
 
 ==Japanese==
