--- a/en/倻/倻.11080.wikitext
+++ b/en/倻/倻.11080.wikitext
@@ -4,13 +4,37 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OSJL|ids=⿰亻耶}}
 
-# [[phonetic]] used in [[Korean]] [[place]] [[name]]s
-
 ====References====
 * {{Han ref|kx=0112.071|hdz=10171.030|uh=503B|ud=20539}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
+===Pronunciation===
+{{zh-pron
+|m=yē
+|m-s=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=pn
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-only|伽倻}}
+----
 ==Japanese==
 
 ===Kanji===
@@ -29,15 +53,6 @@
 {{ko-hanja|hangeul=야|rv=ya|mr=ya}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yē]] ([[ye1]])|wg=yeh<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
