--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -19,9 +19,11 @@
 # An article of [[clothing]], usually worn by [[woman|women]] and [[girl]]s, that hangs from the [[waist]] and covers the lower part of the body.
 #* {{circa|1907}} {{w|O. Henry}}, ''The Purple Dress'':
 #*: "I like purple best," said Maida. "And old Schlegel has promised to make it for $8. It's going to be lovely. I'm going to have a plaited '''skirt''' and a blouse coat trimmed with a band of galloon under a white cloth collar with two rows of—"
-# The part of a [[dress]] or [[robe]] that hangs below the [[waist]].
+# The part of a [[dress]] or [[robe]], etc., that hangs below the [[waist]].
 #* '''1885''', {{w|Ada S. Ballin}}, ''The Science of Dress in Theory and Practice'', Chapter XI:
 #*: The petticoats and '''skirts''' ordinarily worn are decidedly the heaviest part of the dress ; hence it is necessary that some reform should be effected in these.
+#* '''1891''', Arthur Conan Doyle, ''The Red-Headed League''
+#*: “It's all clear,” he whispered. “Have you the chisel and the bags? Great Scott! Jump, Archie, jump, and I'll swing for it!”<br>Sherlock Holmes had sprung out and seized the intruder by the collar. The other dived down the hole, and I heard the sound of rending cloth as Jones clutched at his '''skirts'''.
 # A loose edging to any part of a dress.
 #* Addison
 #*: A narrow lace, or a small '''skirt''' of ruffled linen, which runs along the upper part of the stays before, and crosses the breast, being a part of the tucker, is called the modesty piece.
