--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -156,6 +156,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|stomachus|m}}
 * Latvian: {{t|lv|kuņģis|m}}
+* Ligurian: {{t|lij|stéumago|m}}
 * Lithuanian: {{t+|lt|skrandis|m}}
 * Lotud: {{t|dtr|tian}}
 * Low German: {{t|nds|Maag|m}}
